# 1d_barcode_detection

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/barcode_detector/: CMakeLists.txt  main.cpp
src/: ArticleNumber.h  Bar.cpp  Bar.h  Bar3.cpp  Bar3.h  Bar5.cpp  Bar5.h  Barcode.h  BarcodeDecoder.cpp  BarcodeDecoder.h  BarcodeDetector.cpp  BarcodeDetector.h  BarcodeDetector2.cpp  BarcodeDetector2.h  BarcodeDetector3.cpp  BarcodeDetector3.h  BarcodeDetector4.cpp  BarcodeDetector4.h  BarcodeDetector5.cpp  BarcodeDetector5.h  DefaultBarcodeDetecter.cpp  DefaultBarcodeDetector.cpp  DefaultBarcodeDetector.h
